tests/kyverno-policies/imagepullpolicy-always/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pass
  namespace: test
spec: 
  containers:
  - name: nginx
    image: nginx:latest
    imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: test
spec: 
  containers:
  - name: nginx
    image: nginx:latest
