tests/kyverno-policies/imagepullpolicy-always/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: imagepullpolicy-always
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: imagepullpolicy-always
    rule: imagepullpolicy-always
    resources:
      - test-pass
    kind: Pod
    result: pass
  - policy: imagepullpolicy-always
    rule: imagepullpolicy-always
    resources:
      - test-pass2
    kind: Pod
    result: skip
  - policy: imagepullpolicy-always
    rule: imagepullpolicy-always
    resources:
      - test-fail
    kind: Pod
    result: fail
